# PolyFuseQL

./: .gitignore  .pre-commit-config.yaml  README.md  User_stories.md  commands.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
console/: cli.py  completer.py  main.py  state.py
docker/neo4j/init/: fetch.sh
docker/postgres/init/: 01_northwind_mod
docker/redis/init/: build_seed.sh  fetch.sh
polyfuseql/catalogue/: Catalogue.py  mapping.json
polyfuseql/client/: PolyClient.py
polyfuseql/connector/: Connector.py  ConnectorFactory.py  Neo4j.py  Postgres.py  Redis.py
polyfuseql/strategy/: Delete.py  Insert.py  Query.py  Select.py  Update.py
polyfuseql/utils/: utils.py
scripts/: 00_restart_and_populate.sh
tests/: test_basic_count.py  test_connectivity.py  test_delete_neo4j.py  test_delete_pg.py  test_delete_redis.py  test_get_customer.py  test_get_product.py  test_insert_neo4j.py  test_insert_pg.py  test_insert_redis.py  test_query_customer.py  test_query_customer_neo4j.py  test_query_errors.py  test_query_product.py  test_query_unsopported.py  test_sanity.py  test_update_neo4j.py  test_update_pg.py  test_update_redis.py
