[project]
name = "polyfuseql"
version = "0.1.0"
description = ""
authors = [
    {name = "andr3slelouch",email = "andr3slelouch@github.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "sqlglot (>=26.17.1,<27.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pact-python = "^2.3.1"
behave = "^1.2.6"
locust = "^2.37.3"
mkdocs-material = "^9.6.14"

